--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,9 @@
 .footer {
-    min-height: 100px;
+    min-height: 420px;
     background: #E5E5E5;
     position: relative;
+    background-image: url(./unnatural.gif);
+    background-repeat: no-repeat;
   }
   
   .footer span {
@@ -10,5 +12,15 @@
     left: 0;
     right: 0;
     padding: 3px;
-    background: #B8B8B8;
+  }
+
+  .footer p {
+      font-size: 25px;
+      font-weight: bold;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+  }
+
+  .footer a {
+      color: black;
+      border: white 2px solid;
   }
