--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,3 +1,9 @@
 .project {
     border: 2px solid black;
 }
+.project:nth-of-type(2) {
+    background: red;
+  }
+  .project:nth-of-type(3) {
+    background: green;
+  }
