--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -1,27 +1,16 @@
 .project {
     border: 2px solid black;
+    background: teal;
 }
 
-.project:nth-of-type(1) {
-    background: teal;
-  }
-
 .project:nth-of-type(2) {
-    background: purple;
+    background: fuchsia;
   }
 
-.project:nth-of-type(3) {
-    background: teal;
+.project:nth-of-type(7) {
+    background: fuchsia;
   }
 
-.project:nth-of-type(4) {
-    background: purple;
-  }
-
-.project:nth-of-type(5) {
-    background: teal;
-  }
-
-.project:nth-of-type(6) {
-    background: purple;
+.project:nth-of-type(n):hover {
+    background:green;
   }
