--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,6 +7,12 @@
 .project:nth-of-type(2) {
     background: white;
   }
+  .project:nth-of-type(3) {
+    color: yellow;
+  }
+  .project:nth-of-type(6) {
+    color: yellow;
+  }
 
 .project:nth-of-type(7) {
     background: white;
