updated tech/about sections for projects

--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -21,3 +21,9 @@
 .project:nth-of-type(n):hover {
     background:#00a8cc;
   }
+.tech-container {
+  color: white;
+}
+.about-container {
+  color: white;
+}
