--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -2,6 +2,9 @@
     border: 2px solid black;
     background: #27496d;
     color: #0c7b93;
+    margin: 50px;
+    min-height: 420px;
+   padding: 20px;
 }
 
 .project:nth-of-type(6) {
@@ -9,9 +12,17 @@
   }
   .project:nth-of-type(1) {
     color: yellow;
+    background-image: url(./SuperheroBnB.gif );
+    background-repeat: no-repeat;
+    background-position: right;
+    text-align: left;
   }
   .project:nth-of-type(2) {
     color: yellow;
+    /*background-image: url(./CareerResource.gif );*/
+    background-repeat: no-repeat;
+    background-position: right;
+    text-align: left;
   }
 
 .project:nth-of-type(7) {
