--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,9 +3,10 @@
 }
 
 .header p {
-    font-size: 25px;
+    font-size: 40px;
     font-weight: bold;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    margin: 0 auto;
 }
 
 .header a {
