--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -19,7 +19,7 @@
   }
   .project:nth-of-type(2) {
     color: yellow;
-    /*background-image: url(./CareerResource.gif );*/
+    background-image: url(./CareerResourcesWiki.gif );
     background-repeat: no-repeat;
     background-position: right;
     text-align: left;
