--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -16,6 +16,7 @@
 
   .footer p {
       font-size: 25px;
+      color: white;
       font-weight: bold;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
   }
