--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -7,27 +7,35 @@
    padding: 20px;
 }
 
-.project:nth-of-type(6) {
-    background: white;
-  }
   .project:nth-of-type(1) {
+  color: yellow;
+  background-image: url(./plantstack.gif );
+  background-repeat: no-repeat;
+  background-position: right;
+  text-align: left;
+  }
+  .project:nth-of-type(2) {
     color: yellow;
     background-image: url(./SuperheroBnB.gif );
     background-repeat: no-repeat;
     background-position: right;
     text-align: left;
   }
-  .project:nth-of-type(2) {
+  .project:nth-of-type(3) {
     color: yellow;
     background-image: url(./CareerResourcesWiki.gif );
     background-repeat: no-repeat;
     background-position: right;
     text-align: left;
   }
-
-.project:nth-of-type(7) {
-    background: white;
+  .project:nth-of-type(4) {
+  color: yellow;
+  background-image: url(./noteTaker.gif );
+  background-repeat: no-repeat;
+  background-position: right;
+  text-align: left;
   }
+
 
 .project:nth-of-type(n):hover {
     background:#00a8cc;
